# NotesAndSuch

./: .bashrc  .gitignore  README.md
Java Shenanigans/: .project
Java Shenanigans/src/hashing/: ChainNode.java  HashException.java  HashTable.java  Hashable.java  HashableInteger.java  HashableString1.java  hashTest.in
Java Shenanigans/src/helpingStuff/: Class.java  ListException.java  ListIndexOutOfBoundsException.java  ListInterface.java  Registrar.java  Student.java
Java Shenanigans/src/searches/: SearchReturn.java  Set.java  SortedSearches.java  UnsortedSearches.java
Java Shenanigans/src/sorts/: ImprovedSorts.java  Sorts.java
Java Shenanigans/src/testing/: BitShift.java
Java Shenanigans/src/trees/: BinaryTreeList.java  DoubleEndedBinaryTree.java  DoubleEndedNode.java  DoubleEndedTreeNode.java  Node.java  Set.java  SortedBalancedBinaryTreeSet.java  SortedBinaryTreeList.java  SortedBinaryTreeSet.java  TreeException.java  TreeOutOfBoundsException.java
PersonalProjects/CodingProjects/LocalAI/: PlanSummer.md  adjust-ilo-limits.sh  benchmark-results.md  benchmark.sh  better-launch-models.sh  comparisons.md  gpu-launch-models.sh  gpuAddon.md  launch-models.sh  messages.json  modelComparison.tex  overnight-benchmark.sh  overnight_results.md  run-assistant.sh  transcript-proxy copy.py  transcript-proxy.py
PersonalProjects/CodingProjects/VoiceMemo/: AudioRecorder.h  CMakeLists.txt  JournalDB.hpp  Makefile  PlatformUtils.hpp  README.md  VoiceActivityDetector.hpp  main.cpp
PersonalProjects/D&D/OneShotDruidicRetribution/: StoryOutline.md
PersonalProjects/Papers/: systems_reading_list.tex
RIT/: README.md
RIT/SoftwareEngineering/Software Engineering/: .project
Rowan/: .project  Header.txt
Rowan/src/: Test.java
Rowan/src/lab10/: Lab10Driver.java  LinkedList.java  ListIndexOutOfBoundsException.java  Node.java  OtherSorts.java  SortReturn.java
Rowan/src/lab11/: BSTPInterface.java  BinarySearchTree.java  BinaryTreeBasis.java  KeyedItem.java  MyBinarySearchTree.java  MyBinarySearchTreePlus.java  TreeException.java  TreeNode.java
Rowan/src/lab12/: ChainNode.java  HashException.java  HashTable.java  HashTableDriver.java  HashTableGenerics.java  HashTableInterface.java  hashTest.in  hashTest.out
Rowan/src/lab2/: ListArrayBased.java  ListArrayBasedGeneric.java  ListArrayBasedPlus.java  ListArrayBasedPlusGeneric.java  ListArrayListBased.java  ListArrayListBasedPlus.java  ListException.java  ListIndexOutOfBoundsException.java  ListInterface.java  ListInterfaceGeneric.java  MyLABTester.java  MyLALBTester.java  testL2.in  testL2.out  testL2Spec.out
Rowan/src/lab3/: ListIndexOutOfBoundsException.java  ListInterface.java  ListReferenceBased.java  MyListReferenceBased.java  MySLSTester.java  Node.java  Problem3.java  test2L3.in  test2L3.out  testL3.in  testL3.out
Rowan/src/lab4/: DNode.java  DNodeGeneric.java  ListCDLSBased.java  ListCDLSBasedGeneric.java  ListCDLSTester.java  ListInterface.java  (+5 more)
Rutgers/: .project  README.md
Rutgers/src/: module-info.java
StonyBrook/: README.md
StonyBrook/ComputerArchitecture/: Adder_4_tb.out  Adder_4_tb.v  FourBitAdder.v  Homework1.md  Homework1.v  filelist.txt  test.vcd  test1.vvp  test_four.vcd
(+256 files in other folders)
